Route JFR diagnostics through unified logging